# meridian-mcp

./: .boost_log  .boost_px  .dockerignore  .gitignore  .heartbeat  .npmignore  .pr_audit  .pulse  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  MONOREPO.md  OPERATIONS.md  README.md  boost.txt  package-lock.json  package.json  server.json
api-worker/: worker.mjs  wrangler.toml
binance-proxy/: .dockerignore  .gitignore  Dockerfile  README.md  fly.toml  index.mjs  package-lock.json  package.json
cf-worker/: helio-proxy.mjs  online_learning.mjs  stellar-proxy.mjs  worker.mjs  wrangler.helio.toml  wrangler.stellar.toml  wrangler.toml
data/: audit-report.json  briefs.json  daily_papers.json  skill_embeddings.json  stakes.json  synthesized_skills.json
design-system/: README.md  (+1 more)
photon-route/: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
photon-route/.github/workflows/: finish-line.yml  pages.yml  photon-sweep.yml
photon-route/docs/: design.md
photon-route/eval/: corpus_ids.json  expand_titles.py  fetch.py  manifest.json  relevance.json  run.py  run_bm25.py  run_sbert.py  split_holdout.py
photon-route/pages/: CNAME  index.html
photon-route/space/: analyze_sweep.py  run_sweep.py  run_sweep_fock.py  sim_b1_g1_coherence.py  sim_b2_g2_classifier.py  train.py  train_sbert.py  train_sbert_fock.py
photon-route/src/photon_route/: __init__.py  cli.py  corpus.py  encode.py  http_server.py  retrieve.py
photon-route/src/photon_route/v2/: __init__.py  encoder.py  init_sha.py  ops.py
photon-route/tests/: conftest.py  test_corpus.py  test_retrieve.py  test_v2_equivalence.py
(+1360 files in other folders)
