[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "photon-route"
version = "0.1.0"
description = "Continuous-variable photonic retrieval — Gaussian-state fidelity over Strawberry Fields programs."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "lkempe" }]
keywords = ["qnlp", "cv-quantum", "photonic", "retrieval", "strawberryfields", "gaussian-states", "research"]

dependencies = [
  "numpy>=1.26",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
]

[project.optional-dependencies]
photonic = [
  "strawberryfields>=0.23",
  "thewalrus>=0.21",
  # Pin <81: setuptools 82 dropped pkg_resources, which strawberryfields
  # still imports at module load. Re-evaluate when SF migrates to
  # importlib.metadata (tracked upstream).
  "setuptools>=68,<81",
  # Pin <1.14: scipy 1.14 removed the `simps` alias that thewalrus still
  # uses. Drop this when thewalrus migrates to scipy.integrate.simpson.
  "scipy>=1.10,<1.14",
  # numpy 2.x is incompatible with the scipy<1.14 ABI on Python 3.12.
  "numpy>=1.26,<2",
]
training = [
  # Heavy: only pulled inside the HF Space Docker build, NEVER on the
  # meridian-vm (952 MB RAM). torch CPU wheel on linux-x86_64 is ~200 MB.
  "torch>=2.4",
  "tqdm>=4.66",
]
dev = [
  "ruff>=0.4",
  "pytest>=8.0",
]

[project.scripts]
photon-route = "photon_route.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/photon_route"]
